add SEO Data  to head tag

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./build/tailwind.css">
-    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="png/image">
+
+    <!-- Meta Tags for SEO -->
+    <meta name="description"
+        content="گالری طلا و جواهری نیل، بهترین و زیباترین طلا و جواهرات را برای شما فراهم کرده است.">
+    <meta name="keywords" content="گالری طلا, جواهرات, طلا و جواهر, جواهرات نیل, خرید طلا">
+    <meta name="author" content="گالری طلا و جواهری نیل">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="گالری طلا و جواهری نیل">
+    <meta property="og:description"
+        content="گالری طلا و جواهری نیل، بهترین و زیباترین طلا و جواهرات را برای شما فراهم کرده است.">
+    <meta property="og:image" content="../assets/images/favicon.svg">
+    <meta property="og:url" content="https://www.nilejewelry.ir">
+    <meta property="og:type" content="website">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg+xml">
+
+    <!-- Title -->
     <title>گالری طلا و جواهری نیل</title>
+
+    <!-- Fonts (optional) -->
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
+
+    <!-- Tailwind CSS -->
+    <link rel="stylesheet" href="./build/tailwind.css">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "گالری طلا و جواهری نیل",
+        "url": "https://www.nilejewelry.ir",
+        "logo": "../assets/images/favicon.svg",
+        "sameAs": [
+            "https://www.instagram.com/nilejewelry",
+            "https://twitter.com/nilejewelry"
+        ]
+    }
+    </script>
+
+    <!-- Hreflang for Multilingual Support -->
+    <link rel="alternate" href="https://www.nilejewelry.ir" hreflang="fa-IR">
 </head>
 
 <body class="overflow-hidden">
