--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa-IR" dir="rtl">
+<html lang="fa" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -36,6 +36,7 @@
     {
         "@context": "https://schema.org",
         "@type": "Organization",
+        "inLanguage": "fa"
         "name": "گالری طلا و جواهری نیل",
         "url": "https://www.nilejewelry.ir",
         "logo": "../assets/images/favicon.svg",
@@ -50,13 +51,13 @@
     <link rel="alternate" href="https://www.nilejewelry.ir" hreflang="fa-IR">
 </head>
 
-<body class="overflow-hidden">
+<body class="cbg_primary min-h-screen font-Vazirmatn px-5 flex flex-col justify-center items-center">
 
     <!-- Main Section -->
-    <main class="cbg_primary flex flex-col justify-center h-screen px-5">
+    <main class="w-full container xl:max-w-lg mx-auto">
 
         <!-- Welcom Section -->
-        <div class="bg-black rounded-lg p-2 shadow-lg mx-auto sm:w-ful md:w-fit hidden" name="welcomeSection">
+        <div class="bg-black rounded-lg p-2 shadow-lg mx-auto sm:w-full md:w-fit" data-section="welcome">
             <img src="../assets/images/favicon.svg" alt="Nile-Jewelry-Logo" class="w-44 h-44 mx-auto mb-4">
             <p class="text-white text-center mb-4">به گالری طلا و جواهری نیل خوش آمدید ! </p>
             <p class="text-gray-600 text-center mb-4">
@@ -67,7 +68,7 @@
             <div class="flex justify-center items-center mt-8">
                 <button type="button" name="btnStart"
                     class="bg-transparent text-white mb-8 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer">
-                    ورود به گالری
+                    ورود | ثبت نام
                 </button>
             </div>
             <!--  -->
@@ -75,34 +76,90 @@
         <!--  -->
 
         <!-- Login Section -->
-        <div class="bg-black rounded-lg p-2 shadow-lg mx-auto w-fit md:w-1/4 " name="loginSection">
-            <img src="../assets/images/favicon.svg" alt="Nile-Jewelry-Logo" class="w-44 h-44 mx-auto mb-4">
-            <div>
+        <div class="bg-black rounded-lg p-4 shadow-lg mx-auto sm:w-full md:w-fit hidden" data-section="login">
+            <img src="../assets/images/logo.svg" alt="Nile-Jewelry-Logo" class="w-44 h-44 mx-auto mb-4">
+            <h1 class="text-white text-center mb-4">به گالری طلا و جواهری نیل خوش آمدید ! </h1>
 
-                <!-- Login -->
-                <div class="flex justify-center items-center mt-8">
-                    <form action="/login" method="post" autocomplete="off" class="flex flex-col items-center">
+            <!-- Login Form -->
+            <div class="flex justify-center items-center mt-8">
+                <form autocomplete="on" class="flex flex-col items-center">
+
+                    <!-- Username Input -->
+                    <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
+
+                        <!-- icon -->
+                        <div class="flex justify-center items-center border-l-1 border-white px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="26" fill="none">
+                                <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                    d="M15.688 5.5a4.687 4.687 0 1 1-9.375 0 4.687 4.687 0 0 1 9.375 0ZM1.626 23.148a9.375 9.375 0 0 1 18.748 0A22.416 22.416 0 0 1 11 25.188c-3.345 0-6.52-.73-9.374-2.04Z" />
+                            </svg>
+                        </div>
+                        <!--  -->
+
                         <input type="text" name="username" placeholder="نام کاربری"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-lg mb-4 w-full">
-                        <input type="password" name="password" placeholder="رمز عبور"
-                            class="bg-gray-800 text-white px-4 py-2 rounded-lg mb-4 w-full">
-                        <button type="submit"
-                            class="bg-transparent text-white mb-8 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer">
-                            ورود
-                        </button>
-                    </form>
-                </div>
+                            class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none"
+                            autocomplete="on">
+                    </div>
+                    <!--  -->
 
-                <!-- SignUp -->
-                <div class="flex justify-center items-center mt-8">
+                    <!-- Password Input -->
+                    <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
+
+                        <!-- icon -->
+                        <div class="flex justify-center items-center border-l-1 border-white px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="none">
+                                <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                    d="M20.625 13.125V8.437a5.625 5.625 0 1 0-11.25 0v4.688m-.938 14.063h13.126a2.812 2.812 0 0 0 2.812-2.813v-8.438a2.812 2.812 0 0 0-2.813-2.812H8.438a2.812 2.812 0 0 0-2.812 2.813v8.437a2.812 2.812 0 0 0 2.813 2.813Z" />
+                            </svg>
+                        </div>
+                        <!--  -->
+
+                        <input type="password" name="password" placeholder="رمز عبور"
+                            class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none">
+                    </div>
+                    <!--  -->
+
+                    <!-- Show Password -->
+                    <div class="w-full mb-3">
+                        <label for="showPassword" class="flex justify-start items-center">
+                            <input type="checkbox" name="showPassword" id="showPassword"
+                                class="w-4 h-4 mb-2 cursor-pointer accent-yellow-300">
+                            <p class="text-white mb-2 px-4">
+                                مشاهده رمز عبور
+                            </p>
+                        </label>
+                    </div>
+                    <!--  -->
+
+                    <!-- Login Button -->
+                    <button type="submit" name="btnLogin"
+                        class="bg-transparent text-white mb-1 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer w-full">
+                        ورود
+                    </button>
+                    <!--  -->
+
+                </form>
+            </div>
+
+            <!-- SignUp Button -->
+            <div class="flex justify-between items-center mt-6 p-x-4">
+
+                <a href="">
                     <p
-                        class="bg-transparent text-white mb-8 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer">
+                        class="bg-transparent text-white mb-8 border-b-2 border-r-2 text-sm border-gray-700 px-3 py-2 rounded transition duration-200 hover:bg-white hover:text-black cursor-pointer shadow-lg">
+                        فراموشی رمز عبور
+                    </p>
+                </a>
+
+                <a href="">
+                    <p
+                        class="bg-transparent text-white mb-8 border-t-2 border-l-2 border-gray-700 px-8 py-2 rounded transition duration-200 hover:bg-white hover:text-black cursor-pointer shadow-lg">
                         ثبت نام
                     </p>
-                </div>
-                <!--  -->
+                </a>
 
             </div>
+            <!--  -->
 
         </div>
         <!--  -->
@@ -111,16 +168,7 @@
     <!--  -->
 
     <!-- Footer Section -->
-    <footer class="bg-black text-center py-4  rounded-lg shadow-lg fixed bottom-0 mx-auto w-full">
-        <div class="flex justify-center items-center text-gray-400 sm:text-sm text-xs">
-            <p> تمام حقوق مادی و معنوی برای </p>
-            <h1 class="font-bold golden px-2">
-                <a href="#" class="text-amber-300 hover:text-amber-500 transition duration-200">
-                    جواهری نیل
-                </a>
-            </h1>
-            <p> می باشد &copy; </p>
-        </div>
+    <footer class=" rounded-lg p-2 shadow-lg mx-auto sm:w-full md:w-fit">
     </footer>
     <!--  -->
 
