--- a/public/auth-register.html
+++ b/public/auth-register.html
@@ -56,33 +56,14 @@
     <!-- Main Section -->
     <main class="w-full container xl:max-w-lg mx-auto">
 
-        <!-- Welcom Section -->
-        <div class="bg-black rounded-lg p-2 shadow-lg mx-auto sm:w-full md:w-fit" data-section="welcome">
-            <img src="../assets/images/favicon.svg" alt="Nile-Jewelry-Logo" class="w-44 h-44 mx-auto mb-4">
-            <p class="text-white text-center mb-4">به گالری طلا و جواهری نیل خوش آمدید ! </p>
-            <p class="text-gray-600 text-center mb-4">
-                ما بهترین و زیباترین طلا و جواهرات را برای شما فراهم کرده‌ایم.
-            </p>
-
-            <!-- Confirm Button -->
-            <div class="flex justify-center items-center mt-8">
-                <button type="button" name="btnStart"
-                    class="bg-transparent text-white mb-8 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer">
-                    ورود | ثبت نام
-                </button>
-            </div>
-            <!--  -->
-        </div>
-        <!--  -->
-
         <!-- Login Section -->
-        <div class="bg-black rounded-lg p-4 shadow-lg mx-auto sm:w-full md:w-fit hidden" data-section="login">
+        <div class="bg-black rounded-lg p-4 shadow-lg mx-auto sm:w-full md:w-fit" data-section="register">
             <img src="../assets/images/logo.svg" alt="Nile-Jewelry-Logo" class="w-44 h-44 mx-auto mb-4">
             <h1 class="text-white text-center mb-4">به گالری طلا و جواهری نیل خوش آمدید ! </h1>
 
-            <!-- Login Form -->
+            <!-- SignUp Form -->
             <div class="flex justify-center items-center mt-8">
-                <form autocomplete="on" class="flex flex-col items-center">
+                <form autocomplete="off" class="flex flex-col items-center">
 
                     <!-- Username Input -->
                     <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
@@ -97,6 +78,42 @@
                         <!--  -->
 
                         <input type="text" name="username" placeholder="نام کاربری"
+                            class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none"
+                            autocomplete="off">
+                    </div>
+                    <!--  -->
+
+                    <!-- Email Input -->
+                    <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
+
+                        <!-- icon -->
+                        <div class="flex justify-center items-center border-l-1 border-white px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="27" height="22" fill="none">
+                                <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                    d="M26 4v14c0 .796-.304 1.559-.845 2.121a2.83 2.83 0 0 1-2.04.879H3.885a2.83 2.83 0 0 1-2.04-.879A3.062 3.062 0 0 1 1 18V4m25 0c0-.796-.304-1.559-.845-2.121A2.83 2.83 0 0 0 23.115 1H3.885a2.83 2.83 0 0 0-2.04.879A3.062 3.062 0 0 0 1 4m25 0v.324c0 .512-.126 1.016-.366 1.463-.24.447-.587.823-1.006 1.092l-9.615 6.153a2.802 2.802 0 0 1-1.513.446 2.802 2.802 0 0 1-1.513-.446L2.372 6.88a2.952 2.952 0 0 1-1.006-1.092A3.094 3.094 0 0 1 1 4.325V4" />
+                            </svg>
+                        </div>
+                        <!--  -->
+
+                        <input type="email" name="email" placeholder="ایمیل"
+                            class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none"
+                            autocomplete="on">
+                    </div>
+                    <!--  -->
+
+                    <!-- PhoneNumber Input -->
+                    <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
+
+                        <!-- icon -->
+                        <div class="flex justify-center items-center border-l-1 border-white px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="28" fill="none">
+                                <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                    d="M1 7c0 11.045 7.577 20 16.923 20h2.539c.673 0 1.318-.316 1.794-.879.477-.562.744-1.325.744-2.121v-1.83c0-.687-.396-1.287-.961-1.454l-4.99-1.475c-.497-.146-1.018.074-1.324.556l-1.094 1.724c-.318.502-.868.723-1.365.507-1.847-.802-3.524-2.07-4.916-3.714-1.391-1.645-2.464-3.627-3.143-5.81-.183-.588.005-1.237.429-1.613l1.459-1.294c.41-.361.594-.978.47-1.564L6.317 2.136a1.546 1.546 0 0 0-.45-.818A1.15 1.15 0 0 0 5.087 1H3.537c-.673 0-1.318.316-1.794.879C1.267 2.44 1 3.204 1 4v3Z" />
+                            </svg>
+                        </div>
+                        <!--  -->
+
+                        <input type="text" name="phone" placeholder="تلفن همراه"
                             class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none"
                             autocomplete="on">
                     </div>
@@ -119,6 +136,23 @@
                     </div>
                     <!--  -->
 
+                    <!-- Repeat Password Input -->
+                    <div class="border-1 border-gray-700 mb-4 flex justify-center items-center rounded-lg">
+
+                        <!-- icon -->
+                        <div class="flex justify-center items-center border-l-1 border-white px-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="30" fill="none">
+                                <path stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
+                                    d="M20.625 13.125V8.437a5.625 5.625 0 1 0-11.25 0v4.688m-.938 14.063h13.126a2.812 2.812 0 0 0 2.812-2.813v-8.438a2.812 2.812 0 0 0-2.813-2.812H8.438a2.812 2.812 0 0 0-2.812 2.813v8.437a2.812 2.812 0 0 0 2.813 2.813Z" />
+                            </svg>
+                        </div>
+                        <!--  -->
+
+                        <input type="password" name="password" placeholder=" تکرار رمز عبور"
+                            class="text-white px-4 rounded-lg mb-4 mt-4 focus:outline-none focus:border-none">
+                    </div>
+                    <!--  -->
+
                     <!-- Show Password -->
                     <div class="w-full mb-3">
                         <label for="showPassword" class="flex justify-start items-center">
@@ -131,30 +165,31 @@
                     </div>
                     <!--  -->
 
-                    <!-- Login Button -->
-                    <button type="submit" name="btnLogin"
+                    <!-- Register Button -->
+                    <button type="submit" name="btnRegister"
                         class="bg-transparent text-white mb-1 border-2 border-gray-700 px-6 py-2 rounded transition duration-200 hover:bg-amber-300 hover:text-black cursor-pointer w-full">
-                        ورود
+                        ثبت نام
                     </button>
                     <!--  -->
 
                 </form>
             </div>
+            <!--  -->
 
-            <!-- SignUp Button -->
+            <!-- Login Button -->
             <div class="flex justify-between items-center mt-6 p-x-4">
 
-                <a href="">
+                <a href="./auth-forgot-password.html">
                     <p
                         class="bg-transparent text-white mb-8 border-b-2 border-r-2 text-sm border-gray-700 px-3 py-2 rounded transition duration-200 hover:bg-white hover:text-black cursor-pointer shadow-lg">
                         فراموشی رمز عبور
                     </p>
                 </a>
 
-                <a href="">
+                <a href="./auth-login.html">
                     <p
                         class="bg-transparent text-white mb-8 border-t-2 border-l-2 border-gray-700 px-8 py-2 rounded transition duration-200 hover:bg-white hover:text-black cursor-pointer shadow-lg">
-                        ثبت نام
+                        ورود
                     </p>
                 </a>
 
@@ -173,7 +208,7 @@
     <!--  -->
 
     <!-- Add Javascript -->
-    <script type="module" src="../src/js/auth.js"></script>
+    <script type="module" src="../src/js/register.js"></script>
     <!--  -->
 
 </body>
