--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     <!--  -->
 
     <!-- Main Section -->
-    <main class="container xl:min-w-lg ">
+    <main class="container 2xl:min-w-lg">
 
         <!-- Slider -->
         <div class="relative sm:mt-10 lg:mt-60 mb-10">
@@ -188,7 +188,7 @@
         <!--  -->
 
         <!-- BestSeller List -->
-        <div class="flex flex-col">
+        <div class="flex flex-col lg:px-8">
 
             <!-- Title -->
             <div class="flex justify-start items-center gap-4 mb-4 mt-4 border-b-2 border-yellow-300 lg:border-none">
@@ -210,15 +210,16 @@
             <!--  -->
 
             <!-- Product List -->
-            <div class="flex flex-nowrap justify-center items-center gap-8 p-4 mb-8 overflow-x-auto scrollbar-hide">
+            <div class="flex flex-nowrap justify-center items-center gap-3 p-4 mb-8 overflow-x-auto scrollbar-hide"
+                id="BestSellerList">
 
                 <!-- Product Card -->
-                <div class="bg-black rounded-lg shadow-lg">
-                    <a href="#" class="w-96 h-96 flex flex-col justify-center items-center">
+                <div class="bg-black rounded-lg shadow-lg" >
+                    <a href="#" class="w-70 h-full flex flex-col justify-center items-center">
 
                         <!-- Thumnail -->
                         <div class="w-full flex justify-center items-center mb-2 mt-2 ">
-                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 rounded-lg mt-6">
+                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 mt-6">
                         </div>
                         <!--  -->
 
@@ -241,7 +242,7 @@
 
                         <!-- Name -->
                         <div class="w-full flex justify-center items-center mb-4 mt-4 px-8">
-                            <span class="text-xs lg:text-2xl font-bold text-gray-700">
+                            <span class="font-bold text-gray-700">
                                 انگشتر طلا نگین دار وِرساچو
                             </span>
                         </div>
@@ -249,7 +250,7 @@
 
                         <!-- Price and Checkout -->
                         <div class="w-full flex justify-between items-center mb-4 mt-4 px-8">
-                            <span class="text-xl lg:text-2xl font-bold text-white">
+                            <span class="font-bold text-white">
                                 1,000,000 تومان
                             </span>
                             <button
@@ -272,11 +273,11 @@
 
                 <!-- Product Card -->
                 <div class="bg-black rounded-lg shadow-lg">
-                    <a href="#" class="w-96 h-96 flex flex-col justify-center items-center">
+                    <a href="#" class="w-70 h-full flex flex-col justify-center items-center">
 
                         <!-- Thumnail -->
                         <div class="w-full flex justify-center items-center mb-2 mt-2 ">
-                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 rounded-lg mt-6">
+                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 mt-6">
                         </div>
                         <!--  -->
 
@@ -299,7 +300,7 @@
 
                         <!-- Name -->
                         <div class="w-full flex justify-center items-center mb-4 mt-4 px-8">
-                            <span class="text-xs lg:text-2xl font-bold text-gray-700">
+                            <span class="font-bold text-gray-700">
                                 انگشتر طلا نگین دار وِرساچو
                             </span>
                         </div>
@@ -312,6 +313,22 @@
 
                     </a>
                 </div>
+                <!--  -->
+
+
+                <!-- Show More -->
+                <a href="#"
+                    class="bg-black rounded-lg shadow-lg h-[410px]  flex flex-col justify-center items-center border-2 border-yellow-300">
+                    <div class="text-white bg-black flex flex-col justify-center items-center w-40 gap-4">
+                        <svg width="40" height="40" viewBox="0 0 40 40" stroke="#D4AF37" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M19.0083 13L12.0083 19.75L19.0083 26.5M32 19.75H12.5M39.0083 19.75C39.0083 22.2123 38.5233 24.6505 37.581 26.9253C36.6387 29.2002 35.2576 31.2672 33.5165 33.0083C31.7754 34.7493 29.7084 36.1305 27.4336 37.0727C25.1587 38.015 22.7205 38.5 20.2583 38.5C17.796 38.5 15.3578 38.015 13.0829 37.0727C10.8081 36.1305 8.7411 34.7493 7 33.0083C5.2589 31.2672 3.87779 29.2002 2.93551 26.9253C1.99323 24.6505 1.50825 22.2123 1.50825 19.75C1.50825 14.7772 3.48369 10.0081 7 6.49175C10.5163 2.97544 15.2854 1 20.2583 1C25.2311 1 30.0002 2.97544 33.5165 6.49175C37.0328 10.0081 39.0083 14.7772 39.0083 19.75Z"
+                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        <span class="block">نمایش بیشتر</span>
+                    </div>
+                </a>
                 <!--  -->
 
             </div>
@@ -327,7 +344,7 @@
         <!--  -->
 
         <!-- Newest List -->
-        <div class="flex flex-col">
+        <div class="flex flex-col lg:px-8">
 
             <!-- Title -->
             <div class="flex justify-start items-center gap-4 mb-4 mt-4 border-b-2 border-yellow-300 lg:border-none">
@@ -349,8 +366,10 @@
             <!--  -->
 
             <!-- Product List -->
-            <div class="flex flex-nowrap justify-center items-center gap-8 p-4 mb-8 overflow-x-auto scrollbar-hide">
-                <h3 class="text-white bg-black sm:text-sm md:text-xl font-bold p-16 rounded-2xl border-2 border-yellow-300">
+            <div class="flex flex-nowrap justify-center items-center gap-8 p-4 mb-8 overflow-x-auto scrollbar-hide"
+                id="NewestList">
+                <h3
+                    class="text-white bg-black sm:text-sm md:text-xl font-bold p-16 rounded-2xl border-2 border-yellow-300">
                     دادهای برای نمایش وجود ندارد
                 </h3>
             </div>
