--- a/public/index.html
+++ b/public/index.html
@@ -210,127 +210,11 @@
             <!--  -->
 
             <!-- Product List -->
-            <div class="flex flex-nowrap justify-center items-center gap-3 p-4 mb-8 overflow-x-auto scrollbar-hide"
-                id="BestSellerList">
-
-                <!-- Product Card -->
-                <div class="bg-black rounded-lg shadow-lg" >
-                    <a href="#" class="w-70 h-full flex flex-col justify-center items-center">
-
-                        <!-- Thumnail -->
-                        <div class="w-full flex justify-center items-center mb-2 mt-2 ">
-                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 mt-6">
-                        </div>
-                        <!--  -->
-
-                        <!-- Status and Type -->
-                        <div class="w-full flex justify-between items-center mb-4 mt-4 px-8">
-                            <div
-                                class="golden border-1 border-yellow-300 rounded-lg px-4 py-1 flex justify-center items-center gap-2">
-                                <span>
-                                    حلقه
-                                </span>
-                            </div>
-                            <div
-                                class="golden border-1 border-yellow-300 rounded-lg px-4 py-1 flex justify-center items-center gap-2">
-                                <span>
-                                    موجود
-                                </span>
-                            </div>
-                        </div>
-                        <!--  -->
-
-                        <!-- Name -->
-                        <div class="w-full flex justify-center items-center mb-4 mt-4 px-8">
-                            <span class="font-bold text-gray-700">
-                                انگشتر طلا نگین دار وِرساچو
-                            </span>
-                        </div>
-                        <!--  -->
-
-                        <!-- Price and Checkout -->
-                        <div class="w-full flex justify-between items-center mb-4 mt-4 px-8">
-                            <span class="font-bold text-white">
-                                1,000,000 تومان
-                            </span>
-                            <button
-                                class="border-1 border-yellow-300 text-black rounded-lg px-4 py-2 hover:bg-yellow-400 transition-all duration-300 hover:cursor-pointer">
-                                <i>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none"
-                                        stroke="#fff" viewBox="0 0 50 50">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="5"
-                                            d="M32.813 21.875V12.5a7.813 7.813 0 0 0-15.626 0v9.375m23.659-4.152 2.631 25a2.342 2.342 0 0 1-2.331 2.59H8.854a2.343 2.343 0 0 1-2.333-2.59l2.633-25a2.344 2.344 0 0 1 2.331-2.098h27.03c1.2 0 2.206.906 2.33 2.098Zm-22.877 4.152a.781.781 0 1 1-1.563 0 .781.781 0 0 1 1.563 0Zm15.625 0a.781.781 0 1 1-1.563 0 .781.781 0 0 1 1.563 0Z" />
-                                    </svg>
-                                </i>
-                            </button>
-                            <!--  -->
-                        </div>
-                        <!--  -->
-
-                    </a>
-                </div>
-                <!--  -->
-
-                <!-- Product Card -->
-                <div class="bg-black rounded-lg shadow-lg">
-                    <a href="#" class="w-70 h-full flex flex-col justify-center items-center">
-
-                        <!-- Thumnail -->
-                        <div class="w-full flex justify-center items-center mb-2 mt-2 ">
-                            <img src="../assets/images/product.png" alt="product" class="w-3/4 h-44 mt-6">
-                        </div>
-                        <!--  -->
-
-                        <!-- Status and Type -->
-                        <div class="w-full flex justify-between items-center mb-4 mt-4 px-8">
-                            <div
-                                class="golden border-1 border-yellow-300 rounded-lg px-4 py-1 flex justify-center items-center gap-2">
-                                <span>
-                                    حلقه
-                                </span>
-                            </div>
-                            <div
-                                class="text-red-600 border-1 border-red-600 rounded-lg px-4 py-1 flex justify-center items-center gap-2">
-                                <span>
-                                    ناموجود
-                                </span>
-                            </div>
-                        </div>
-                        <!--  -->
-
-                        <!-- Name -->
-                        <div class="w-full flex justify-center items-center mb-4 mt-4 px-8">
-                            <span class="font-bold text-gray-700">
-                                انگشتر طلا نگین دار وِرساچو
-                            </span>
-                        </div>
-                        <!--  -->
-
-                        <!-- Price -->
-                        <div class="w-full flex justify-between items-center mb-4 mt-4 px-8 py-6">
-                        </div>
-                        <!--  -->
-
-                    </a>
-                </div>
-                <!--  -->
-
-
-                <!-- Show More -->
-                <a href="#"
-                    class="bg-black rounded-lg shadow-lg h-[410px]  flex flex-col justify-center items-center border-2 border-yellow-300">
-                    <div class="text-white bg-black flex flex-col justify-center items-center w-40 gap-4">
-                        <svg width="40" height="40" viewBox="0 0 40 40" stroke="#D4AF37" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M19.0083 13L12.0083 19.75L19.0083 26.5M32 19.75H12.5M39.0083 19.75C39.0083 22.2123 38.5233 24.6505 37.581 26.9253C36.6387 29.2002 35.2576 31.2672 33.5165 33.0083C31.7754 34.7493 29.7084 36.1305 27.4336 37.0727C25.1587 38.015 22.7205 38.5 20.2583 38.5C17.796 38.5 15.3578 38.015 13.0829 37.0727C10.8081 36.1305 8.7411 34.7493 7 33.0083C5.2589 31.2672 3.87779 29.2002 2.93551 26.9253C1.99323 24.6505 1.50825 22.2123 1.50825 19.75C1.50825 14.7772 3.48369 10.0081 7 6.49175C10.5163 2.97544 15.2854 1 20.2583 1C25.2311 1 30.0002 2.97544 33.5165 6.49175C37.0328 10.0081 39.0083 14.7772 39.0083 19.75Z"
-                                stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        <span class="block">نمایش بیشتر</span>
+            <div class="w-full flex flex-nowrap justify-center items-center gap-3 p-4 mb-8">
+                <div class="swiper centered-slide-carousel swiper-container relative productList">
+                    <div class="swiper-wrapper" id="BestSellerList">
                     </div>
-                </a>
-                <!--  -->
-
+                </div>
             </div>
             <!--  -->
 
